--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    jsjsjsj
+    <h1>GIT GITHUB</h1>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque quia aperiam adipisci velit labore aliquid, ducimus ad asperiores eos voluptatum et ipsam! Odio sit voluptatum, reiciendis provident laboriosam rerum dolores!</p>
 </body>
 </html>
