--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
     <title>Document</title>
 </head>
 <body>
     <h1>GIT GITHUB</h1>
+    <h2>Seance pratique</h2>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque quia aperiam adipisci velit labore aliquid, ducimus ad asperiores eos voluptatum et ipsam! Odio sit voluptatum, reiciendis provident laboriosam rerum dolores!</p>
 </body>
 </html>
