--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <h1>GIT GITHUB</h1>
-    <h2>Seance pratique</h2>
+    <h2>Seance pratique 1</h2>
+    <h2>Seance pratique 2</h2>
+    <h2>Seance pratique 3</h2>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque quia aperiam adipisci velit labore aliquid, ducimus ad asperiores eos voluptatum et ipsam! Odio sit voluptatum, reiciendis provident laboriosam rerum dolores!</p>
 </body>
 </html>
