--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <h2>Seance pratique 1</h2>
     <h2>Seance pratique 2</h2>
     <h2>Seance pratique 3</h2>
+    <h2>Seance pratique 3</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum reiciendis vero placeat quod. Provident distinctio, neque perferendis quod qui illum rerum quis rem iusto, deleniti dolorem tempore repellat suscipit nam!</p>
+    <h1>GGGG</h1>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque quia aperiam adipisci velit labore aliquid, ducimus ad asperiores eos voluptatum et ipsam! Odio sit voluptatum, reiciendis provident laboriosam rerum dolores!</p>
 </body>
 </html>
